AC_INIT(src/main.c)

# *******************************************
# * figure out the configure options:
cflags=-O2
lflags=-O2
AC_ARG_ENABLE( debug,
       [  --enable-debug          compile with debugging flags set],
       cflags=-g
       lflags=-g 
       AC_DEFINE(DEBUG_MEMORY,1) AC_DEFINE(USE_DEBUG,1),
       AC_DEFINE(DEBUG_MEMORY,0) AC_DEFINE(USE_DEBUG,0) )
# USE_QUICKFILL ???  for now:
AC_DEFINE(USE_QUICKFILL,1)
# USE_NO_COLOR ???  for now:
AC_DEFINE(USE_NO_COLOR,0)

AC_SUBST(cflags)
AC_SUBST(lflags)

AC_SUBST(prefix)

# *******************************************
# check for various programs, and stuff:
AC_PROG_INSTALL
AC_SUBST(INSTALL)
AC_SUBST(INSTALL_DATA)
AC_PROG_RANLIB
AC_SUBST(RANLIB)
AC_PROG_CC
AC_SUBST(CC)
AC_C_BIGENDIAN

# *******************************************
# check for UI libs:
LIBS="-lXmu -lXext -lX11 -lSM -lICE"
#AC_CHECK_LIB(SM, ???)
#AC_CHECK_LIB(ICE, ???)
AC_CHECK_LIB(Xt, XtVaCreateWidget,
	LIBS="-lXt $LIBS",
	AC_MSG_ERROR(Must have libXt) )
AC_CHECK_LIB(Xm, XmCreateMainWindow,
	LIBS="-lXm $LIBS",
	AC_MSG_ERROR(Must have libXm) )
AC_CHECK_LIB(Xpm, XpmReadFileToXpmImage,
	AC_DEFINE(HAVE_XPM,1) LIBS="-lXpm $LIBS",
	AC_DEFINE(HAVE_XPM,0) )
AC_PATH_X
AC_SUBST(x_includes)
AC_SUBST(x_libraries)
AC_SUBST(LIBS)

AC_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile src/Makefile lib/Makefile lib/libhtmlw/Makefile lib/Xbae-4.6.2-linas/Makefile lib/Xbae-4.6.2-linas/src/Makefile lib/ComboBox-1.33/Makefile)
