
checksdir = ${GNC_CHECKS_DIR}

if HAVE_GTK_2_10
checks_DATA = \
	deluxe.chk \
	liberty.chk \
	quicken.chk \
	quicken_wallet.chk
else
checks_DATA = \
	gnomeprint/deluxe.chk \
	gnomeprint/quicken.chk \
	gnomeprint/quicken_wallet.chk
endif

EXTRA_DIST = \
	deluxe.chk \
	liberty.chk \
	quicken.chk \
	quicken_wallet.chk \
	gnomeprint/deluxe.chk \
	gnomeprint/quicken.chk \
	gnomeprint/quicken_wallet.chk
